--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -34,6 +34,14 @@
             font-size: 1.5em;
             margin-top: 20px;
         }
+        .feedback {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 1000;
+        }
     </style>
 </head>
 <body>
@@ -45,6 +53,10 @@
     <div class="word" id="word"></div>
     <button id="startButton">Start Reading</button>
     <div class="result" id="result"></div>
+    <div class="feedback" id="feedback">
+        <img id="correctGif" src="certo.gif" alt="Correct">
+        <audio id="correctAudio" src="certo.mp3"></audio>
+    </div>
 
     <script>
         const wordListUrl = '../data1/words.txt';
@@ -83,6 +95,9 @@
         const resultDiv = document.getElementById("result");
         const imageElement = document.getElementById("image");
         const iconElement = document.getElementById("icon");
+        const feedbackDiv = document.getElementById("feedback");
+        const correctGif = document.getElementById("correctGif");
+        const correctAudio = document.getElementById("correctAudio");
 
         const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
         recognition.lang = 'en-US';
@@ -101,8 +116,11 @@
             if (speechResult.includes(expectedWord)) {
                 resultDiv.textContent = "Correct!";
                 resultDiv.style.color = "green";
-                attemptCount = 0; // Reset attempt count on correct answer
-                loadWord(currentWordIndex + 1); // Load the next word
+                playCorrectFeedback();
+                setTimeout(() => {
+                    stopCorrectFeedback();
+                    loadWord(currentWordIndex + 1); // Load the next word
+                }, 3000); // 3 seconds for feedback
             } else {
                 handleIncorrectAttempt();
             }
@@ -115,7 +133,6 @@
         };
 
         recognition.onend = () => {
-            // If recognition ends naturally (e.g., after a period of silence), handle as incorrect attempt
             handleIncorrectAttempt();
         };
 
@@ -147,6 +164,19 @@
                     }, 2000); // 2-second delay before reading the word
                 });
             }
+        }
+
+        function playCorrectFeedback() {
+            feedbackDiv.style.display = "block";
+            correctGif.style.display = "block";
+            correctAudio.play();
+        }
+
+        function stopCorrectFeedback() {
+            feedbackDiv.style.display = "none";
+            correctGif.style.display = "none";
+            correctAudio.pause();
+            correctAudio.currentTime = 0; // Reset the audio to the beginning
         }
 
         // Function to read a message using Speech Synthesis
