--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -133,7 +133,10 @@
         };
 
         recognition.onend = () => {
-            handleIncorrectAttempt();
+            // If recognition ends naturally (e.g., after a period of silence), treat it as incorrect
+            if (!resultDiv.textContent.includes("Correct!")) {
+                handleIncorrectAttempt();
+            }
         };
 
         function startRecognition() {
@@ -157,10 +160,7 @@
                 readMessage(tryAgainMessage, () => {
                     setTimeout(() => {
                         readWord(words[currentWordIndex], true);
-                        setTimeout(() => {
-                            resultDiv.textContent = ""; // Clear the message
-                            startRecognition(); // Allow the student to try again
-                        }, 3000); // Give time to listen to the correct pronunciation
+                        resultDiv.textContent = ""; // Clear the message after reading the word
                     }, 2000); // 2-second delay before reading the word
                 });
             }
