--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -42,10 +42,26 @@
             transform: translate(-50%, -50%);
             z-index: 1000;
         }
+        #backButton {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        #backButton:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
     <h1>Read the Word</h1>
+    
+    <button id="backButton">Back</button>
+
     <div class="container">
         <img id="image" class="image" src="" alt="Image">
         <img id="icon" class="icon" src="businessman.png" alt="Icon">
@@ -98,6 +114,7 @@
         const feedbackDiv = document.getElementById("feedback");
         const correctGif = document.getElementById("correctGif");
         const correctAudio = document.getElementById("correctAudio");
+        const backButton = document.getElementById("backButton");
 
         const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
         recognition.lang = 'en-US';
@@ -106,6 +123,10 @@
 
         startButton.addEventListener('click', () => {
             startRecognition();
+        });
+
+        backButton.addEventListener('click', () => {
+            window.history.back(); // Go to the previous page
         });
 
         recognition.onresult = (event) => {
@@ -133,7 +154,6 @@
         };
 
         recognition.onend = () => {
-            // If recognition ends naturally (e.g., after a period of silence), treat it as incorrect
             if (!resultDiv.textContent.includes("Correct!")) {
                 handleIncorrectAttempt();
             }
@@ -160,7 +180,6 @@
                 readMessage(tryAgainMessage, () => {
                     setTimeout(() => {
                         readWord(words[currentWordIndex], true);
-                        resultDiv.textContent = ""; // Clear the message after reading the word
                     }, 2000); // 2-second delay before reading the word
                 });
             }
