--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -177,7 +177,7 @@
             if (speechResult.includes(expectedWord)) {
                 resultDiv.textContent = "Correct!";
                 resultDiv.style.color = "green";
-                updateScore();
+                updateScore(true); // Update the score immediately after a correct answer
                 playCorrectFeedback();
                 setTimeout(() => {
                     stopCorrectFeedback();
@@ -214,8 +214,7 @@
             if (attemptCount >= maxAttempts) {
                 resultDiv.textContent = "Moving to the next word...";
                 resultDiv.style.color = "red";
-                failedAttemptsScore++;
-                updateScore();
+                updateScore(false); // Update the score after the third incorrect attempt
                 loadWord(currentWordIndex + 1);
             } else {
                 const tryAgainMessage = "Try again. Listen to the correct pronunciation of this word.";
@@ -230,11 +229,15 @@
             }
         }
 
-        function updateScore() {
-            if (attemptCount === 1) {
-                firstAttemptScore++;
-            } else if (attemptCount === 2 || attemptCount === 3) {
-                secondThirdAttemptScore++;
+        function updateScore(correct) {
+            if (correct) {
+                if (attemptCount === 1) {
+                    firstAttemptScore++;
+                } else if (attemptCount === 2 || attemptCount === 3) {
+                    secondThirdAttemptScore++;
+                }
+            } else {
+                failedAttemptsScore++;
             }
             firstAttemptScoreDiv.textContent = firstAttemptScore;
             secondThirdAttemptScoreDiv.textContent = secondThirdAttemptScore;
