--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -225,7 +225,11 @@
                 playCorrectFeedback();
                 setTimeout(() => {
                     stopCorrectFeedback();
-                    loadWord(currentWordIndex + 1); // Load the next word
+                    if (currentWordIndex + 1 < words.length) {
+                        loadWord(currentWordIndex + 1); // Load the next word
+                    } else {
+                        showFinalFeedback(); // Show feedback when all words are completed
+                    }
                 }, 3000); // 3 seconds for feedback
             } else {
                 handleIncorrectAttempt();
@@ -259,7 +263,11 @@
                 resultDiv.textContent = "Moving to the next word...";
                 resultDiv.style.color = "red";
                 updateScore(false); // Atualiza a pontuação após a terceira tentativa incorreta
-                loadWord(currentWordIndex + 1);
+                if (currentWordIndex + 1 < words.length) {
+                    loadWord(currentWordIndex + 1);
+                } else {
+                    showFinalFeedback(); // Show feedback when all words are completed
+                }
             } else {
                 const tryAgainMessage = "Try again. Listen to the correct pronunciation of this word.";
                 resultDiv.textContent = tryAgainMessage;
