--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -10,6 +10,7 @@
             text-align: center;
             margin-top: 50px;
             background-color: #f5f5f5;
+            padding: 0 20px;
         }
         h1 {
             font-family: 'Times New Roman', Times, serif;
@@ -114,6 +115,21 @@
         @keyframes fadeIn {
             0% { opacity: 0; }
             100% { opacity: 1; }
+        }
+
+        /* Media Query for Small Screens */
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 2em;
+                margin-top: 60px;
+            }
+            #backButton {
+                position: relative;
+                top: auto;
+                left: auto;
+                margin-top: 10px;
+                display: inline-block;
+            }
         }
     </style>
 </head>
