--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -293,17 +293,17 @@
 
         function updateScore(correct) {
             if (correct) {
-                if (attemptCount === 1) {
+                if (attemptCount === 0) { // Verifica se é a primeira tentativa
                     firstAttemptScore++;
-                } else if (attemptCount === 2 || attemptCount === 3) {
+                    firstAttemptScoreDiv.textContent = firstAttemptScore;
+                } else if (attemptCount === 1 || attemptCount === 2) {
                     secondThirdAttemptScore++;
+                    secondThirdAttemptScoreDiv.textContent = secondThirdAttemptScore;
                 }
             } else {
                 failedAttemptsScore++;
+                failedAttemptsScoreDiv.textContent = failedAttemptsScore;
             }
-            firstAttemptScoreDiv.textContent = firstAttemptScore;
-            secondThirdAttemptScoreDiv.textContent = secondThirdAttemptScore;
-            failedAttemptsScoreDiv.textContent = failedAttemptsScore;
         }
 
         function showFinalFeedback() {
