--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -45,7 +45,8 @@
         }
         .word.enlarged {
             transform: scale(1.5);
-            color: red;
+            color: #DAA520; /* Amarelo escuro */
+            font-weight: bold;
         }
         .result {
             font-size: 1.5em;
@@ -293,10 +294,10 @@
 
         function updateScore(correct) {
             if (correct) {
-                if (attemptCount === 0) { // Verifica se é a primeira tentativa
+                if (attemptCount === 1) { // Verifica se é a primeira tentativa
                     firstAttemptScore++;
                     firstAttemptScoreDiv.textContent = firstAttemptScore;
-                } else if (attemptCount === 1 || attemptCount === 2) {
+                } else if (attemptCount === 2 || attemptCount === 3) {
                     secondThirdAttemptScore++;
                     secondThirdAttemptScoreDiv.textContent = secondThirdAttemptScore;
                 }
