--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -45,7 +45,7 @@
         }
         .word.enlarged {
             transform: scale(1.5);
-            color: #DAA520; /* Amarelo escuro */
+            color: #FFFF00; /* Amarelo */
             font-weight: bold;
         }
         .result {
@@ -72,8 +72,9 @@
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
             transition: background-color 0.3s ease;
         }
-        .button:hover {
-            background-color: #0056b3;
+        .button:disabled {
+            background-color: #cccccc;
+            cursor: not-allowed;
         }
         #backButton {
             margin-bottom: 20px;
@@ -213,6 +214,7 @@
         recognition.maxAlternatives = 1;
 
         startButton.addEventListener('click', () => {
+            disableStartButton();
             startRecognition(); // Start recognition without stopping any ongoing processes
         });
 
@@ -241,6 +243,7 @@
                     } else {
                         showFinalFeedback(); // Show feedback when all words are completed
                     }
+                    enableStartButton();
                 }, 3000); // 3 seconds for feedback
             } else {
                 handleIncorrectAttempt();
@@ -251,6 +254,7 @@
             resultDiv.textContent = "Error occurred in recognition: " + event.error;
             resultDiv.style.color = "red";
             clearTimeout(recognitionTimeout);
+            enableStartButton();
         };
 
         recognition.onend = () => {
@@ -279,6 +283,7 @@
                 } else {
                     showFinalFeedback(); // Show feedback when all words are completed
                 }
+                enableStartButton();
             } else {
                 const tryAgainMessage = "Try again. Listen to the correct pronunciation of this word.";
                 resultDiv.textContent = tryAgainMessage;
@@ -287,6 +292,7 @@
                     // Agora, só lê a palavra após a mensagem terminar e um pequeno atraso
                     setTimeout(() => {
                         readWordWithHighlight(words[currentWordIndex]);
+                        enableStartButton();
                     }, 2000); // 2 segundos de atraso antes de ler a palavra
                 });
             }
@@ -381,6 +387,15 @@
             finalFeedbackDiv.style.display = "none";
             restartButton.style.display = "none";
             loadWord(0);
+            enableStartButton();
+        }
+
+        function disableStartButton() {
+            startButton.disabled = true;
+        }
+
+        function enableStartButton() {
+            startButton.disabled = false;
         }
     </script>
 </body>
