--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -45,7 +45,7 @@
         }
         .word.enlarged {
             transform: scale(1.5);
-            color: #FFFF00; /* Amarelo */
+            color: #DAA520; /* Amarelo escuro */
             font-weight: bold;
         }
         .result {
@@ -300,10 +300,10 @@
 
         function updateScore(correct) {
             if (correct) {
-                if (attemptCount === 1) { // Verifica se é a primeira tentativa
+                if (attemptCount === 0) { // Verifica se é a primeira tentativa
                     firstAttemptScore++;
                     firstAttemptScoreDiv.textContent = firstAttemptScore;
-                } else if (attemptCount === 2 || attemptCount === 3) {
+                } else if (attemptCount > 0 && attemptCount < 3) {
                     secondThirdAttemptScore++;
                     secondThirdAttemptScoreDiv.textContent = secondThirdAttemptScore;
                 }
