--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -162,6 +162,7 @@
         let currentWordIndex = 0;
         let attemptCount = 0;
         let recognitionTimeout;
+        let tryAgainPlayed = false; // Controlar se o "Try Again" foi lido
         const maxAttempts = 3;
 
         let firstAttemptScore = 0;
@@ -188,6 +189,7 @@
                 document.getElementById("word").textContent = currentWord;
                 document.getElementById("image").src = imageFolderUrl + currentImage;
                 attemptCount = 0; // Reset attempt count for the new word
+                tryAgainPlayed = false; // Reset "Try Again" control
             }
         }
 
@@ -285,16 +287,20 @@
                 }
                 enableStartButton();
             } else {
-                const tryAgainMessage = "Try again. Listen to the correct pronunciation of this word.";
-                resultDiv.textContent = tryAgainMessage;
-                resultDiv.style.color = "red";
-                readMessage(tryAgainMessage, () => {
-                    // Agora, só lê a palavra após a mensagem terminar e um pequeno atraso
-                    setTimeout(() => {
-                        readWordWithHighlight(words[currentWordIndex]);
-                        enableStartButton();
-                    }, 2000); // 2 segundos de atraso antes de ler a palavra
-                });
+                if (!tryAgainPlayed) { // Garante que "Try Again" é lido apenas uma vez
+                    const tryAgainMessage = "Try again. Listen to the correct pronunciation of this word.";
+                    resultDiv.textContent = tryAgainMessage;
+                    resultDiv.style.color = "red";
+                    readMessage(tryAgainMessage, () => {
+                        setTimeout(() => {
+                            readWordWithHighlight(words[currentWordIndex]);
+                            enableStartButton();
+                        }, 2000); // 2 segundos de atraso antes de ler a palavra
+                    });
+                    tryAgainPlayed = true;
+                } else {
+                    enableStartButton(); // Reabilita o botão se a tentativa continuar
+                }
             }
         }
 
