--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -280,15 +280,17 @@
                 resultDiv.textContent = "Moving to the next word...";
                 resultDiv.style.color = "red";
                 updateScore(false); // Atualiza a pontuação após a terceira tentativa incorreta
-                if (currentWordIndex + 1 < words.length) {
-                    loadWord(currentWordIndex + 1);
-                } else {
-                    showFinalFeedback(); // Show feedback when all words are completed
-                }
-                enableStartButton();
+                setTimeout(() => {
+                    if (currentWordIndex + 1 < words.length) {
+                        loadWord(currentWordIndex + 1);
+                    } else {
+                        showFinalFeedback(); // Show feedback when all words are completed
+                    }
+                    enableStartButton();
+                }, 2000); // Pequeno atraso para dar tempo ao feedback antes de mudar
             } else {
-                if (!tryAgainPlayed) { // Garante que "Try Again" é lido apenas uma vez
-                    const tryAgainMessage = "Try again. Listen to the correct pronunciation of this word.";
+                const tryAgainMessage = "Try again. Listen to the correct pronunciation of this word.";
+                if (!tryAgainPlayed) { // Garante que "Try Again" é lido apenas uma vez por tentativa
                     resultDiv.textContent = tryAgainMessage;
                     resultDiv.style.color = "red";
                     readMessage(tryAgainMessage, () => {
@@ -298,18 +300,16 @@
                         }, 2000); // 2 segundos de atraso antes de ler a palavra
                     });
                     tryAgainPlayed = true;
-                } else {
-                    enableStartButton(); // Reabilita o botão se a tentativa continuar
                 }
             }
         }
 
         function updateScore(correct) {
             if (correct) {
-                if (attemptCount === 0) { // Verifica se é a primeira tentativa
+                if (attemptCount === 1) { // Verifica se é a primeira tentativa
                     firstAttemptScore++;
                     firstAttemptScoreDiv.textContent = firstAttemptScore;
-                } else if (attemptCount > 0 && attemptCount < 3) {
+                } else if (attemptCount > 1 && attemptCount <= 3) {
                     secondThirdAttemptScore++;
                     secondThirdAttemptScoreDiv.textContent = secondThirdAttemptScore;
                 }
