--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -161,7 +161,6 @@
         let words = [];
         let currentWordIndex = 0;
         let attemptCount = 0;
-        let recognitionTimeout;
         const maxAttempts = 3;
 
         let firstAttemptScore = 0;
@@ -187,7 +186,10 @@
 
                 document.getElementById("word").textContent = currentWord;
                 document.getElementById("image").src = imageFolderUrl + currentImage;
-                attemptCount = 0; // Reset attempt count for the new word
+                
+                // Reset attempt count for the new word
+                attemptCount = 0;
+                enableStartButton();
             }
         }
 
@@ -263,7 +265,7 @@
             if (attemptCount === 0) { // Primeira tentativa
                 firstAttemptScore++;
                 firstAttemptScoreDiv.textContent = firstAttemptScore;
-            } else if (attemptCount === 1 || attemptCount === 2) { // Segunda ou terceira tentativa
+            } else if (attemptCount > 0 && attemptCount < maxAttempts) { // Segunda ou terceira tentativa
                 secondThirdAttemptScore++;
                 secondThirdAttemptScoreDiv.textContent = secondThirdAttemptScore;
             }
@@ -277,24 +279,22 @@
                 } else {
                     showFinalFeedback();
                 }
-                enableStartButton();
             }, 3000); // 3 segundos para o feedback
         }
 
         function handleIncorrectAttempt() {
             attemptCount++;
             if (attemptCount >= maxAttempts) {
-                resultDiv.textContent = "Moving to the next word...";
-                resultDiv.style.color = "red";
                 failedAttemptsScore++;
                 failedAttemptsScoreDiv.textContent = failedAttemptsScore;
+                resultDiv.textContent = "Moving to the next word...";
+                resultDiv.style.color = "red";
                 setTimeout(() => {
                     if (currentWordIndex + 1 < words.length) {
                         loadWord(currentWordIndex + 1);
                     } else {
                         showFinalFeedback();
                     }
-                    enableStartButton();
                 }, 2000); // Pequeno atraso antes de mudar de palavra
             } else {
                 playTryAgainMessage();
@@ -375,6 +375,7 @@
         });
 
         function restartGame() {
+            currentWordIndex = 0;
             firstAttemptScore = 0;
             secondThirdAttemptScore = 0;
             failedAttemptsScore = 0;
@@ -384,7 +385,6 @@
             finalFeedbackDiv.style.display = "none";
             restartButton.style.display = "none";
             loadWord(0);
-            enableStartButton();
         }
 
         function disableStartButton() {
