--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -262,16 +262,21 @@
         }
 
         function handleCorrectAnswer() {
-            if (attemptCount === 0) { // Primeira tentativa
+            clearTimeout(recognitionTimeout);
+            recognition.stop();
+
+            if (attemptCount === 0) {
                 firstAttemptScore++;
                 firstAttemptScoreDiv.textContent = firstAttemptScore;
-            } else if (attemptCount > 0 && attemptCount < maxAttempts) { // Segunda ou terceira tentativa
+            } else if (attemptCount > 0 && attemptCount < maxAttempts) {
                 secondThirdAttemptScore++;
                 secondThirdAttemptScoreDiv.textContent = secondThirdAttemptScore;
             }
+
             resultDiv.textContent = "Correct!";
             resultDiv.style.color = "green";
             playCorrectFeedback();
+            
             setTimeout(() => {
                 stopCorrectFeedback();
                 if (currentWordIndex + 1 < words.length) {
@@ -284,18 +289,25 @@
 
         function handleIncorrectAttempt() {
             attemptCount++;
+            clearTimeout(recognitionTimeout);
+            recognition.stop();
+
             if (attemptCount >= maxAttempts) {
                 failedAttemptsScore++;
                 failedAttemptsScoreDiv.textContent = failedAttemptsScore;
+
                 resultDiv.textContent = "Moving to the next word...";
                 resultDiv.style.color = "red";
+
                 setTimeout(() => {
                     if (currentWordIndex + 1 < words.length) {
                         loadWord(currentWordIndex + 1);
                     } else {
                         showFinalFeedback();
                     }
+                    enableStartButton();
                 }, 2000); // Pequeno atraso antes de mudar de palavra
+
             } else {
                 playTryAgainMessage();
             }
@@ -305,6 +317,7 @@
             const tryAgainMessage = "Try again. Listen to the correct pronunciation of this word.";
             resultDiv.textContent = tryAgainMessage;
             resultDiv.style.color = "red";
+
             readMessage(tryAgainMessage, () => {
                 setTimeout(() => {
                     readWordWithHighlight(words[currentWordIndex]);
@@ -379,12 +392,15 @@
             firstAttemptScore = 0;
             secondThirdAttemptScore = 0;
             failedAttemptsScore = 0;
+            attemptCount = 0;
+
             firstAttemptScoreDiv.textContent = "0";
             secondThirdAttemptScoreDiv.textContent = "0";
             failedAttemptsScoreDiv.textContent = "0";
             finalFeedbackDiv.style.display = "none";
             restartButton.style.display = "none";
             loadWord(0);
+            enableStartButton();
         }
 
         function disableStartButton() {
