--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -142,6 +142,7 @@
         let words = [];
         let currentWordIndex = 0;
         let recognitionTimeout;
+        let tryAgainPlayed = false;
 
         // Fetch words from the words.txt file
         fetch(wordListUrl)
@@ -164,6 +165,7 @@
 
                 document.getElementById("word").textContent = currentWord;
                 document.getElementById("image").src = imageFolderUrl + currentImage;
+                tryAgainPlayed = false; // Reset Try Again flag
             }
         }
 
@@ -228,7 +230,7 @@
         };
 
         recognition.onend = () => {
-            if (!resultDiv.textContent.includes("Correct!")) {
+            if (!resultDiv.textContent.includes("Correct!") && !tryAgainPlayed) {
                 handleIncorrectAttempt();
             }
         };
@@ -253,15 +255,18 @@
         }
 
         function handleIncorrectAttempt() {
-            const tryAgainMessage = "Try again. Listen to the correct pronunciation of this word.";
-            resultDiv.textContent = tryAgainMessage;
-            resultDiv.style.color = "red";
-            readMessage(tryAgainMessage, () => {
-                setTimeout(() => {
-                    readWordWithHighlight(words[currentWordIndex]);
-                    enableStartButton();
-                }, 2000);
-            });
+            if (!tryAgainPlayed) {
+                tryAgainPlayed = true;
+                const tryAgainMessage = "Try again. Listen to the correct pronunciation of this word.";
+                resultDiv.textContent = tryAgainMessage;
+                resultDiv.style.color = "red";
+                readMessage(tryAgainMessage, () => {
+                    setTimeout(() => {
+                        readWordWithHighlight(words[currentWordIndex]);
+                        enableStartButton();
+                    }, 2000);
+                });
+            }
         }
 
         function playCorrectFeedback() {
