--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -88,6 +88,15 @@
         .nav-button {
             margin: 0 10px;
         }
+        #startButton {
+            background-color: transparent;
+            border: none;
+            cursor: pointer;
+        }
+        #startButton img {
+            width: 50px;
+            height: 50px;
+        }
         #finalFeedback {
             font-size: 2em;
             color: black;
@@ -109,6 +118,10 @@
             #backButton {
                 margin-bottom: 10px;
             }
+            #startButton img {
+                width: 40px;
+                height: 40px;
+            }
         }
     </style>
 </head>
@@ -120,7 +133,9 @@
         <img id="icon" class="icon" src="businessman.png" alt="Icon">
     </div>
     <div class="word" id="word"></div>
-    <button id="startButton" class="button">Start Reading</button>
+    <button id="startButton">
+        <img src="microphone-icon.png" alt="Start Reading">
+    </button>
     <div class="result" id="result"></div>
     
     <div class="navigation">
@@ -165,6 +180,7 @@
 
                 document.getElementById("word").textContent = currentWord;
                 document.getElementById("image").src = imageFolderUrl + currentImage;
+                resetFeedback(); // Clear any feedback when navigating
                 tryAgainPlayed = false; // Reset Try Again flag
             }
         }
@@ -267,6 +283,14 @@
                     }, 2000);
                 });
             }
+        }
+
+        function resetFeedback() {
+            resultDiv.textContent = "";
+            feedbackDiv.style.display = "none";
+            correctGif.style.display = "none";
+            correctAudio.pause();
+            correctAudio.currentTime = 0;
         }
 
         function playCorrectFeedback() {
