--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -134,7 +134,7 @@
     </div>
     <div class="word" id="word"></div>
     <button id="startButton">
-        <img src="microphone-icon.png" alt="Start Reading">
+        <img src="microfone.png" alt="Start Reading">
     </button>
     <div class="result" id="result"></div>
     
