--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -89,13 +89,21 @@
             margin: 0 10px;
         }
         #startButton {
-            background-color: transparent;
+            background-color: #007BFF;
             border: none;
             cursor: pointer;
+            border-radius: 50%;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+            padding: 15px;
+            display: inline-block;
+            transition: box-shadow 0.3s ease;
         }
         #startButton img {
             width: 50px;
             height: 50px;
+        }
+        #startButton:hover {
+            box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
         }
         #finalFeedback {
             font-size: 2em;
@@ -144,7 +152,6 @@
     </div>
     
     <div id="finalFeedback"></div>
-    <button id="restartButton" class="button">Restart</button>
     
     <div class="feedback" id="feedback">
         <img id="correctGif" src="certo.gif" alt="Correct">
@@ -198,7 +205,6 @@
         const correctAudio = document.getElementById("correctAudio");
 
         const finalFeedbackDiv = document.getElementById("finalFeedback");
-        const restartButton = document.getElementById("restartButton");
 
         const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
         recognition.lang = 'en-US';
@@ -220,10 +226,6 @@
 
         backButton.addEventListener('click', () => {
             window.history.back(); // Navigate back to the previous page
-        });
-
-        restartButton.addEventListener('click', () => {
-            restartGame(); // Restart the game
         });
 
         recognition.onresult = (event) => {
@@ -332,14 +334,6 @@
             readWordWithHighlight(words[currentWordIndex]);
         });
 
-        function restartGame() {
-            currentWordIndex = 0;
-            finalFeedbackDiv.style.display = "none";
-            restartButton.style.display = "none";
-            loadWord(0);
-            enableStartButton();
-        }
-
         function disableStartButton() {
             startButton.disabled = true;
         }
@@ -351,7 +345,6 @@
         function showFinalFeedback() {
             finalFeedbackDiv.textContent = "You've completed all words!";
             finalFeedbackDiv.style.display = "block";
-            restartButton.style.display = "block";
         }
     </script>
 </body>
