--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -152,6 +152,7 @@
     </div>
     
     <div id="finalFeedback"></div>
+    <button id="restartButton" class="button" style="display: none;">Restart</button>
     
     <div class="feedback" id="feedback">
         <img id="correctGif" src="certo.gif" alt="Correct">
@@ -205,6 +206,7 @@
         const correctAudio = document.getElementById("correctAudio");
 
         const finalFeedbackDiv = document.getElementById("finalFeedback");
+        const restartButton = document.getElementById("restartButton");
 
         const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
         recognition.lang = 'en-US';
@@ -226,6 +228,10 @@
 
         backButton.addEventListener('click', () => {
             window.history.back(); // Navigate back to the previous page
+        });
+
+        restartButton.addEventListener('click', () => {
+            restartGame(); // Restart the game
         });
 
         recognition.onresult = (event) => {
@@ -267,7 +273,11 @@
             playCorrectFeedback();
             setTimeout(() => {
                 stopCorrectFeedback();
-                loadWord(currentWordIndex + 1);
+                if (currentWordIndex + 1 < words.length) {
+                    loadWord(currentWordIndex + 1);
+                } else {
+                    showFinalFeedback();
+                }
                 enableStartButton();
             }, 3000); // 3 segundos para o feedback
         }
@@ -334,17 +344,26 @@
             readWordWithHighlight(words[currentWordIndex]);
         });
 
+        function showFinalFeedback() {
+            finalFeedbackDiv.textContent = "You've completed all words!";
+            finalFeedbackDiv.style.display = "block";
+            restartButton.style.display = "inline-block"; // Show restart button at the end
+        }
+
+        function restartGame() {
+            currentWordIndex = 0;
+            finalFeedbackDiv.style.display = "none";
+            restartButton.style.display = "none";
+            loadWord(0);
+            enableStartButton();
+        }
+
         function disableStartButton() {
             startButton.disabled = true;
         }
 
         function enableStartButton() {
             startButton.disabled = false;
-        }
-
-        function showFinalFeedback() {
-            finalFeedbackDiv.textContent = "You've completed all words!";
-            finalFeedbackDiv.style.display = "block";
         }
     </script>
 </body>
